catchup/k8s/ingress/catchup-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catchup-ingress
  namespace: catchup-dev
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "catchup-me.com"
    secretName: letsencrypt-catchup-me
  rules:
    - host: catchup-me.com
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: whoami-service
                port:
                  number: 80
